envoy-config.json
{
 "configs": [
  {
   "@type": "type.googleapis.com/envoy.admin.v3.BootstrapConfigDump",
   "bootstrap": {
    "node": {
     "id": "host~127.0.0.1~no-id~localdomain",
     "cluster": "ingress-cluster",
     "user_agent_name": "envoy",
     "user_agent_build_version": {
      "version": {
       "major_number": 1,
       "minor_number": 35,
       "patch": 9
      },
      "metadata": {
       "build.type": "RELEASE",
       "ssl.version": "BoringSSL",
       "build.label": "dev",
       "revision.sha": "c6e4827ebca9c47af2a3a6540c563c30947bae29",
       "revision.status": "Distribution"
      }
     },
     "extensions": [
      {
       "name": "envoy.route.early_data_policy.default",
       "category": "envoy.route.early_data_policy",
       "type_urls": [
        "envoy.extensions.early_data.v3.DefaultEarlyDataPolicy"
       ]
      },
      {
       "name": "cilium.bpf_metadata",
       "category": "envoy.filters.udp_listener",
       "version": {
        "version": {
         "major_number": 1,
         "minor_number": 1
        },
        "metadata": {
         "": ""
        }
       },
       "type_urls": [
        "cilium.BpfMetadata"
       ]
      },
      {
       "name": "envoy.filters.udp_listener.udp_proxy",
       "category": "envoy.filters.udp_listener",
       "type_urls": [
        "envoy.extensions.filters.udp.udp_proxy.v3.UdpProxyConfig"
       ]
      },
      {
       "name": "envoy.filters.generic.router",
       "category": "envoy.generic_proxy.filters",
       "type_urls": [
        "envoy.extensions.filters.network.generic_proxy.router.v3.Router"
       ]
      },
      {
       "name": "cilium.tls_wrapper",
       "category": "envoy.transport_sockets.upstream",
       "type_urls": [
        "cilium.UpstreamTlsWrapperContext"
       ]
      },
      {
       "name": "envoy.transport_sockets.internal_upstream",
       "category": "envoy.transport_sockets.upstream",
       "type_urls": [
        "envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport"
       ]
      },
      {
       "name": "envoy.transport_sockets.quic",
       "category": "envoy.transport_sockets.upstream",
       "type_urls": [
        "envoy.extensions.transport_sockets.quic.v3.QuicUpstreamTransport"
       ]
      },
      {
       "name": "envoy.transport_sockets.raw_buffer",
       "category": "envoy.transport_sockets.upstream",
       "type_urls": [
        "envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
       ]
      },
      {
       "name": "envoy.transport_sockets.tls",
       "category": "envoy.transport_sockets.upstream",
       "type_urls": [
        "envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext"
       ]
      },
      {
       "name": "envoy.transport_sockets.upstream_proxy_protocol",
       "category": "envoy.transport_sockets.upstream",
       "type_urls": [
        "envoy.extensions.transport_sockets.proxy_protocol.v3.ProxyProtocolUpstreamTransport"
       ]
      },
      {
       "name": "raw_buffer",
       "category": "envoy.transport_sockets.upstream"
      },
      {
       "name": "tls",
       "category": "envoy.transport_sockets.upstream"
      },
      {
       "name": "envoy.path.match.uri_template.uri_template_matcher",
       "category": "envoy.path.match",
       "type_urls": [
        "envoy.extensions.path.match.uri_template.v3.UriTemplateMatchConfig"
       ]
      },
      {
       "name": "envoy.bootstrap.internal_listener",
       "category": "envoy.bootstrap",
       "type_urls": [
        "envoy.extensions.bootstrap.internal_listener.v3.InternalListener"
       ]
      },
      {
       "name": "envoy.bootstrap.wasm",
       "category": "envoy.bootstrap",
       "type_urls": [
        "envoy.extensions.wasm.v3.WasmService"
       ]
      },
      {
       "name": "envoy.extensions.network.socket_interface.default_socket_interface",
       "category": "envoy.bootstrap",
       "type_urls": [
        "envoy.extensions.network.socket_interface.v3.DefaultSocketInterface"
       ]
      },
      {
       "name": "envoy.compression.brotli.decompressor",
       "category": "envoy.compression.decompressor",
       "type_urls": [
        "envoy.extensions.compression.brotli.decompressor.v3.Brotli"
       ]
      },
      {
       "name": "envoy.compression.gzip.decompressor",
       "category": "envoy.compression.decompressor",
       "type_urls": [
        "envoy.extensions.compression.gzip.decompressor.v3.Gzip"
       ]
      },
      {
       "name": "envoy.compression.zstd.decompressor",
       "category": "envoy.compression.decompressor",
       "type_urls": [
        "envoy.extensions.compression.zstd.decompressor.v3.Zstd"
       ]
      },
      {
       "name": "envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
       "category": "envoy.upstream_options",
       "type_urls": [
        "envoy.extensions.upstreams.http.v3.HttpProtocolOptions"
       ]
      },
      {
       "name": "envoy.extensions.upstreams.tcp.v3.TcpProtocolOptions",
       "category": "envoy.upstream_options",
       "type_urls": [
        "envoy.extensions.upstreams.tcp.v3.TcpProtocolOptions"
       ]
      },
      {
       "name": "envoy.upstreams.http.http_protocol_options",
       "category": "envoy.upstream_options"
      },
      {
       "name": "envoy.upstreams.tcp.tcp_protocol_options",
       "category": "envoy.upstream_options"
      },
      {
       "name": "envoy.rds_factory.default",
       "category": "envoy.rds_factory"
      },
      {
       "name": "envoy.ssl.server_context_factory.default",
       "category": "envoy.ssl.server_context_factory"
      },
      {
       "name": "auto",
       "category": "envoy.thrift_proxy.protocols"
      },
      {
       "name": "binary",
       "category": "envoy.thrift_proxy.protocols"
      },
      {
       "name": "binary/non-strict",
       "category": "envoy.thrift_proxy.protocols"
      },
      {
       "name": "compact",
       "category": "envoy.thrift_proxy.protocols"
      },
      {
       "name": "twitter",
       "category": "envoy.thrift_proxy.protocols"
      },
      {
       "name": "quic.server_preferred_address.datasource",
       "category": "envoy.quic.server_preferred_address",
       "type_urls": [
        "envoy.extensions.quic.server_preferred_address.v3.DataSourceServerPreferredAddressConfig"
       ]
      },
      {
       "name": "quic.server_preferred_address.fixed",
       "category": "envoy.quic.server_preferred_address",
       "type_urls": [
        "envoy.extensions.quic.server_preferred_address.v3.FixedServerPreferredAddressConfig"
       ]
      },
      {
       "name": "cilium.l7policy",
       "category": "envoy.filters.http.upstream",
       "type_urls": [
        "cilium.L7Policy"
       ]
      },
      {
       "name": "envoy.ext_proc",
       "category": "envoy.filters.http.upstream"
      },
      {
       "name": "envoy.filters.http.ext_proc",
       "category": "envoy.filters.http.upstream",
       "type_urls": [
        "envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute",
        "envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor"
       ]
      },
      {
       "name": "envoy.filters.http.match_delegate",
       "category": "envoy.filters.http.upstream",
       "type_urls": [
        "envoy.extensions.common.matching.v3.ExtensionWithMatcher",
        "envoy.extensions.common.matching.v3.ExtensionWithMatcherPerRoute"
       ]
      },
      {
       "name": "envoy.filters.http.upstream_codec",
       "category": "envoy.filters.http.upstream",
       "type_urls": [
        "envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec"
       ]
      },
      {
       "name": "envoy.filters.http.wasm",
       "category": "envoy.filters.http.upstream",
       "type_urls": [
        "envoy.extensions.filters.http.wasm.v3.Wasm"
       ]
      },
      {
       "name": "envoy.http.original_ip_detection.xff",
       "category": "envoy.http.original_ip_detection",
       "type_urls": [
        "envoy.extensions.http.original_ip_detection.xff.v3.XffConfig"
       ]
      },
      {
       "name": "envoy.quic.crypto_stream.server.quiche",
       "category": "envoy.quic.server.crypto_stream",
       "type_urls": [
        "envoy.extensions.quic.crypto_stream.v3.CryptoServerStreamConfig"
       ]
      },
      {
       "name": "envoy.built_in_formatters.http.default",
       "category": "envoy.built_in_formatters"
      },
      {
       "name": "envoy.built_in_formatters.stream_info.default",
       "category": "envoy.built_in_formatters"
      },
      {
       "name": "envoy.quic.proof_source.filter_chain",
       "category": "envoy.quic.proof_source",
       "type_urls": [
        "envoy.extensions.quic.proof_source.v3.ProofSourceConfig"
       ]
      },
      {
       "name": "envoy.route_config_update_requester.default",
       "category": "envoy.route_config_update_requester"
      },
      {
       "name": "envoy.matching.inputs.destination_ip",
       "category": "envoy.matching.network.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.destination_port",
       "category": "envoy.matching.network.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.direct_source_ip",
       "category": "envoy.matching.network.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.DirectSourceIPInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.dns_san",
       "category": "envoy.matching.network.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.ssl.v3.DnsSanInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.filter_state",
       "category": "envoy.matching.network.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.FilterStateInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.server_name",
       "category": "envoy.matching.network.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.ServerNameInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.source_ip",
       "category": "envoy.matching.network.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.SourceIPInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.source_port",
       "category": "envoy.matching.network.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.SourcePortInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.source_type",
       "category": "envoy.matching.network.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.SourceTypeInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.subject",
       "category": "envoy.matching.network.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.ssl.v3.SubjectInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.transport_protocol",
       "category": "envoy.matching.network.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.TransportProtocolInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.uri_san",
       "category": "envoy.matching.network.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput"
       ]
      },
      {
       "name": "envoy.load_balancing_policies.client_side_weighted_round_robin",
       "category": "envoy.load_balancing_policies",
       "type_urls": [
        "envoy.extensions.load_balancing_policies.client_side_weighted_round_robin.v3.ClientSideWeightedRoundRobin"
       ]
      },
      {
       "name": "envoy.load_balancing_policies.cluster_provided",
       "category": "envoy.load_balancing_policies",
       "type_urls": [
        "envoy.extensions.load_balancing_policies.cluster_provided.v3.ClusterProvided"
       ]
      },
      {
       "name": "envoy.load_balancing_policies.least_request",
       "category": "envoy.load_balancing_policies",
       "type_urls": [
        "envoy.extensions.load_balancing_policies.least_request.v3.LeastRequest"
       ]
      },
      {
       "name": "envoy.load_balancing_policies.maglev",
       "category": "envoy.load_balancing_policies",
       "type_urls": [
        "envoy.extensions.load_balancing_policies.maglev.v3.Maglev"
       ]
      },
      {
       "name": "envoy.load_balancing_policies.override_host",
       "category": "envoy.load_balancing_policies",
       "type_urls": [
        "envoy.extensions.load_balancing_policies.override_host.v3.OverrideHost"
       ]
      },
      {
       "name": "envoy.load_balancing_policies.random",
       "category": "envoy.load_balancing_policies",
       "type_urls": [
        "envoy.extensions.load_balancing_policies.random.v3.Random"
       ]
      },
      {
       "name": "envoy.load_balancing_policies.ring_hash",
       "category": "envoy.load_balancing_policies",
       "type_urls": [
        "envoy.extensions.load_balancing_policies.ring_hash.v3.RingHash"
       ]
      },
      {
       "name": "envoy.load_balancing_policies.round_robin",
       "category": "envoy.load_balancing_policies",
       "type_urls": [
        "envoy.extensions.load_balancing_policies.round_robin.v3.RoundRobin"
       ]
      },
      {
       "name": "envoy.load_balancing_policies.subset",
       "category": "envoy.load_balancing_policies",
       "type_urls": [
        "envoy.extensions.load_balancing_policies.subset.v3.Subset"
       ]
      },
      {
       "name": "envoy.health_checkers.grpc",
       "category": "envoy.health_checkers",
       "type_urls": [
        "envoy.config.core.v3.HealthCheck.GrpcHealthCheck"
       ]
      },
      {
       "name": "envoy.health_checkers.http",
       "category": "envoy.health_checkers",
       "type_urls": [
        "envoy.config.core.v3.HealthCheck.HttpHealthCheck"
       ]
      },
      {
       "name": "envoy.health_checkers.redis",
       "category": "envoy.health_checkers",
       "type_urls": [
        "envoy.extensions.health_checkers.redis.v3.Redis"
       ]
      },
      {
       "name": "envoy.health_checkers.tcp",
       "category": "envoy.health_checkers",
       "type_urls": [
        "envoy.config.core.v3.HealthCheck.TcpHealthCheck"
       ]
      },
      {
       "name": "envoy.health_checkers.thrift",
       "category": "envoy.health_checkers",
       "type_urls": [
        "envoy.extensions.health_checkers.thrift.v3.Thrift"
       ]
      },
      {
       "name": "envoy.path.rewrite.uri_template.uri_template_rewriter",
       "category": "envoy.path.rewrite",
       "type_urls": [
        "envoy.extensions.path.rewrite.uri_template.v3.UriTemplateRewriteConfig"
       ]
      },
      {
       "name": "cilium.bpf_metadata",
       "category": "envoy.filters.listener",
       "version": {
        "version": {
         "major_number": 1,
         "minor_number": 1
        },
        "metadata": {
         "": ""
        }
       },
       "type_urls": [
        "cilium.BpfMetadata"
       ]
      },
      {
       "name": "envoy.filters.listener.http_inspector",
       "category": "envoy.filters.listener",
       "type_urls": [
        "envoy.extensions.filters.listener.http_inspector.v3.HttpInspector"
       ]
      },
      {
       "name": "envoy.filters.listener.local_ratelimit",
       "category": "envoy.filters.listener",
       "type_urls": [
        "envoy.extensions.filters.listener.local_ratelimit.v3.LocalRateLimit"
       ]
      },
      {
       "name": "envoy.filters.listener.proxy_protocol",
       "category": "envoy.filters.listener",
       "type_urls": [
        "envoy.extensions.filters.listener.proxy_protocol.v3.ProxyProtocol"
       ]
      },
      {
       "name": "envoy.filters.listener.tls_inspector",
       "category": "envoy.filters.listener",
       "type_urls": [
        "envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector"
       ]
      },
      {
       "name": "envoy.listener.http_inspector",
       "category": "envoy.filters.listener"
      },
      {
       "name": "envoy.listener.proxy_protocol",
       "category": "envoy.filters.listener"
      },
      {
       "name": "envoy.listener.tls_inspector",
       "category": "envoy.filters.listener"
      },
      {
       "name": "rate_limit_quota",
       "category": "envoy.matching.action",
       "type_urls": [
        "envoy.extensions.filters.http.rate_limit_quota.v3.RateLimitQuotaBucketSettings"
       ]
      },
      {
       "name": "envoy.wasm.runtime.null",
       "category": "envoy.wasm.runtime"
      },
      {
       "name": "envoy.wasm.runtime.v8",
       "category": "envoy.wasm.runtime"
      },
      {
       "name": "envoy.access_loggers.file",
       "category": "envoy.access_loggers",
       "type_urls": [
        "envoy.extensions.access_loggers.file.v3.FileAccessLog"
       ]
      },
      {
       "name": "envoy.access_loggers.fluentd",
       "category": "envoy.access_loggers",
       "type_urls": [
        "envoy.extensions.access_loggers.fluentd.v3.FluentdAccessLogConfig"
       ]
      },
      {
       "name": "envoy.access_loggers.http_grpc",
       "category": "envoy.access_loggers",
       "type_urls": [
        "envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig"
       ]
      },
      {
       "name": "envoy.access_loggers.open_telemetry",
       "category": "envoy.access_loggers",
       "type_urls": [
        "envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig"
       ]
      },
      {
       "name": "envoy.access_loggers.stderr",
       "category": "envoy.access_loggers",
       "type_urls": [
        "envoy.extensions.access_loggers.stream.v3.StderrAccessLog"
       ]
      },
      {
       "name": "envoy.access_loggers.stdout",
       "category": "envoy.access_loggers",
       "type_urls": [
        "envoy.extensions.access_loggers.stream.v3.StdoutAccessLog"
       ]
      },
      {
       "name": "envoy.access_loggers.tcp_grpc",
       "category": "envoy.access_loggers",
       "type_urls": [
        "envoy.extensions.access_loggers.grpc.v3.TcpGrpcAccessLogConfig"
       ]
      },
      {
       "name": "envoy.access_loggers.wasm",
       "category": "envoy.access_loggers",
       "type_urls": [
        "envoy.extensions.access_loggers.wasm.v3.WasmAccessLog"
       ]
      },
      {
       "name": "envoy.file_access_log",
       "category": "envoy.access_loggers"
      },
      {
       "name": "envoy.fluentd_access_log",
       "category": "envoy.access_loggers"
      },
      {
       "name": "envoy.http_grpc_access_log",
       "category": "envoy.access_loggers"
      },
      {
       "name": "envoy.open_telemetry_access_log",
       "category": "envoy.access_loggers"
      },
      {
       "name": "envoy.stderr_access_log",
       "category": "envoy.access_loggers"
      },
      {
       "name": "envoy.stdout_access_log",
       "category": "envoy.access_loggers"
      },
      {
       "name": "envoy.tcp_grpc_access_log",
       "category": "envoy.access_loggers"
      },
      {
       "name": "envoy.wasm_access_log",
       "category": "envoy.access_loggers"
      },
      {
       "name": "auto",
       "category": "envoy.thrift_proxy.transports"
      },
      {
       "name": "framed",
       "category": "envoy.thrift_proxy.transports"
      },
      {
       "name": "header",
       "category": "envoy.thrift_proxy.transports"
      },
      {
       "name": "unframed",
       "category": "envoy.thrift_proxy.transports"
      },
      {
       "name": "envoy.watchdog.abort_action",
       "category": "envoy.guarddog_actions",
       "type_urls": [
        "envoy.watchdog.v3.AbortActionConfig"
       ]
      },
      {
       "name": "envoy.resource_monitors.global_downstream_max_connections",
       "category": "envoy.resource_monitors",
       "type_urls": [
        "envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig"
       ]
      },
      {
       "name": "envoy.filters.udp.session.dynamic_forward_proxy",
       "category": "envoy.filters.udp.session",
       "type_urls": [
        "envoy.extensions.filters.udp.udp_proxy.session.dynamic_forward_proxy.v3.FilterConfig"
       ]
      },
      {
       "name": "envoy.filters.udp.session.http_capsule",
       "category": "envoy.filters.udp.session",
       "type_urls": [
        "envoy.extensions.filters.udp.udp_proxy.session.http_capsule.v3.FilterConfig"
       ]
      },
      {
       "name": "envoy.grpc_credentials.default",
       "category": "envoy.grpc_credentials"
      },
      {
       "name": "envoy.upstream.local_address_selector.default_local_address_selector",
       "category": "envoy.upstream.local_address_selector",
       "type_urls": [
        "envoy.config.upstream.local_address_selector.v3.DefaultLocalAddressSelector"
       ]
      },
      {
       "name": "envoy.compression.brotli.compressor",
       "category": "envoy.compression.compressor",
       "type_urls": [
        "envoy.extensions.compression.brotli.compressor.v3.Brotli"
       ]
      },
      {
       "name": "envoy.compression.gzip.compressor",
       "category": "envoy.compression.compressor",
       "type_urls": [
        "envoy.extensions.compression.gzip.compressor.v3.Gzip"
       ]
      },
      {
       "name": "envoy.compression.zstd.compressor",
       "category": "envoy.compression.compressor",
       "type_urls": [
        "envoy.extensions.compression.zstd.compressor.v3.Zstd"
       ]
      },
      {
       "name": "envoy.network.dns_resolver.cares",
       "category": "envoy.network.dns_resolver",
       "type_urls": [
        "envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig"
       ]
      },
      {
       "name": "envoy.http.header_validators.envoy_default",
       "category": "envoy.http.header_validators",
       "type_urls": [
        "envoy.extensions.http.header_validators.envoy_default.v3.HeaderValidatorConfig"
       ]
      },
      {
       "name": "envoy.tls.cert_validator.default",
       "category": "envoy.tls.cert_validator"
      },
      {
       "name": "envoy.connection_handler.default",
       "category": "envoy.connection_handler"
      },
      {
       "name": "envoy.ip",
       "category": "envoy.resolvers"
      },
      {
       "name": "envoy.generic_proxy.codecs.dubbo",
       "category": "envoy.generic_proxy.codecs",
       "type_urls": [
        "envoy.extensions.filters.network.generic_proxy.codecs.dubbo.v3.DubboCodecConfig"
       ]
      },
      {
       "name": "envoy.generic_proxy.codecs.http1",
       "category": "envoy.generic_proxy.codecs",
       "type_urls": [
        "envoy.extensions.filters.network.generic_proxy.codecs.http1.v3.Http1CodecConfig"
       ]
      },
      {
       "name": "envoy.request_id.uuid",
       "category": "envoy.request_id",
       "type_urls": [
        "envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig"
       ]
      },
      {
       "name": "envoy.config_mux.delta_grpc_mux_factory",
       "category": "envoy.config_mux"
      },
      {
       "name": "envoy.config_mux.grpc_mux_factory",
       "category": "envoy.config_mux"
      },
      {
       "name": "envoy.config_mux.new_grpc_mux_factory",
       "category": "envoy.config_mux"
      },
      {
       "name": "envoy.config_mux.sotw_grpc_mux_factory",
       "category": "envoy.config_mux"
      },
      {
       "name": "envoy.access_loggers.extension_filters.cel",
       "category": "envoy.access_loggers.extension_filters",
       "type_urls": [
        "envoy.extensions.access_loggers.filters.cel.v3.ExpressionFilter"
       ]
      },
      {
       "name": "envoy.listener_manager_impl.default",
       "category": "envoy.listener_manager_impl",
       "type_urls": [
        "envoy.config.listener.v3.ListenerManager"
       ]
      },
      {
       "name": "envoy.listener_manager_impl.validation",
       "category": "envoy.listener_manager_impl",
       "type_urls": [
        "envoy.config.listener.v3.ValidationListenerManager"
       ]
      },
      {
       "name": "envoy.rbac.principals.mtls_authenticated",
       "category": "envoy.rbac.principals",
       "type_urls": [
        "envoy.extensions.rbac.principals.mtls_authenticated.v3.Config"
       ]
      },
      {
       "name": "default",
       "category": "network.connection.client"
      },
      {
       "name": "envoy_internal",
       "category": "network.connection.client"
      },
      {
       "name": "envoy.rbac.matchers.upstream_ip_port",
       "category": "envoy.rbac.matchers",
       "type_urls": [
        "envoy.extensions.rbac.matchers.upstream_ip_port.v3.UpstreamIpPortMatcher"
       ]
      },
      {
       "name": "envoy.rate_limit_descriptors.expr",
       "category": "envoy.rate_limit_descriptors",
       "type_urls": [
        "envoy.extensions.rate_limit_descriptors.expr.v3.Descriptor"
       ]
      },
      {
       "name": "envoy.srds_factory.default",
       "category": "envoy.srds_factory"
      },
      {
       "name": "envoy.regex_engines.google_re2",
       "category": "envoy.regex_engines",
       "type_urls": [
        "envoy.extensions.regex_engines.v3.GoogleRE2"
       ]
      },
      {
       "name": "cilium.tls_wrapper",
       "category": "envoy.transport_sockets.downstream",
       "type_urls": [
        "cilium.DownstreamTlsWrapperContext"
       ]
      },
      {
       "name": "envoy.transport_sockets.quic",
       "category": "envoy.transport_sockets.downstream",
       "type_urls": [
        "envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport"
       ]
      },
      {
       "name": "envoy.transport_sockets.raw_buffer",
       "category": "envoy.transport_sockets.downstream",
       "type_urls": [
        "envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
       ]
      },
      {
       "name": "envoy.transport_sockets.tls",
       "category": "envoy.transport_sockets.downstream",
       "type_urls": [
        "envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext"
       ]
      },
      {
       "name": "raw_buffer",
       "category": "envoy.transport_sockets.downstream"
      },
      {
       "name": "tls",
       "category": "envoy.transport_sockets.downstream"
      },
      {
       "name": "envoy.quic.connection_id_generator.quic_lb",
       "category": "envoy.quic.connection_id_generator",
       "type_urls": [
        "envoy.extensions.quic.connection_id_generator.quic_lb.v3.Config"
       ]
      },
      {
       "name": "envoy.quic.deterministic_connection_id_generator",
       "category": "envoy.quic.connection_id_generator",
       "type_urls": [
        "envoy.extensions.quic.connection_id_generator.v3.DeterministicConnectionIdGeneratorConfig"
       ]
      },
      {
       "name": "envoy.config_subscription.ads",
       "category": "envoy.config_subscription"
      },
      {
       "name": "envoy.config_subscription.ads_collection",
       "category": "envoy.config_subscription"
      },
      {
       "name": "envoy.config_subscription.aggregated_grpc_collection",
       "category": "envoy.config_subscription"
      },
      {
       "name": "envoy.config_subscription.delta_grpc",
       "category": "envoy.config_subscription"
      },
      {
       "name": "envoy.config_subscription.delta_grpc_collection",
       "category": "envoy.config_subscription"
      },
      {
       "name": "envoy.config_subscription.filesystem",
       "category": "envoy.config_subscription"
      },
      {
       "name": "envoy.config_subscription.filesystem_collection",
       "category": "envoy.config_subscription"
      },
      {
       "name": "envoy.config_subscription.grpc",
       "category": "envoy.config_subscription"
      },
      {
       "name": "envoy.http.early_header_mutation.header_mutation",
       "category": "envoy.http.early_header_mutation",
       "type_urls": [
        "envoy.extensions.http.early_header_mutation.header_mutation.v3.HeaderMutation"
       ]
      },
      {
       "name": "cilium.l7policy",
       "category": "envoy.filters.http",
       "type_urls": [
        "cilium.L7Policy"
       ]
      },
      {
       "name": "envoy.ext_authz",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.ext_proc",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.basic_auth",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.basic_auth.v3.BasicAuth",
        "envoy.extensions.filters.http.basic_auth.v3.BasicAuthPerRoute"
       ]
      },
      {
       "name": "envoy.filters.http.compressor",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.compressor.v3.Compressor",
        "envoy.extensions.filters.http.compressor.v3.CompressorPerRoute"
       ]
      },
      {
       "name": "envoy.filters.http.dynamic_forward_proxy",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig",
        "envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig"
       ]
      },
      {
       "name": "envoy.filters.http.ext_authz",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.ext_authz.v3.ExtAuthz",
        "envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
       ]
      },
      {
       "name": "envoy.filters.http.ext_proc",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute",
        "envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor"
       ]
      },
      {
       "name": "envoy.filters.http.grpc_stats",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.grpc_stats.v3.FilterConfig"
       ]
      },
      {
       "name": "envoy.filters.http.grpc_web",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.grpc_web.v3.GrpcWeb"
       ]
      },
      {
       "name": "envoy.filters.http.health_check",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.health_check.v3.HealthCheck"
       ]
      },
      {
       "name": "envoy.filters.http.jwt_authn",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication",
        "envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig"
       ]
      },
      {
       "name": "envoy.filters.http.local_ratelimit",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit"
       ]
      },
      {
       "name": "envoy.filters.http.match_delegate",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.common.matching.v3.ExtensionWithMatcher",
        "envoy.extensions.common.matching.v3.ExtensionWithMatcherPerRoute"
       ]
      },
      {
       "name": "envoy.filters.http.oauth2",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.oauth2.v3.OAuth2"
       ]
      },
      {
       "name": "envoy.filters.http.rate_limit_quota",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.rate_limit_quota.v3.RateLimitQuotaFilterConfig",
        "envoy.extensions.filters.http.rate_limit_quota.v3.RateLimitQuotaOverride"
       ]
      },
      {
       "name": "envoy.filters.http.ratelimit",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.ratelimit.v3.RateLimit",
        "envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
       ]
      },
      {
       "name": "envoy.filters.http.rbac",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.rbac.v3.RBAC",
        "envoy.extensions.filters.http.rbac.v3.RBACPerRoute"
       ]
      },
      {
       "name": "envoy.filters.http.router",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.router.v3.Router"
       ]
      },
      {
       "name": "envoy.filters.http.set_filter_state",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.set_filter_state.v3.Config"
       ]
      },
      {
       "name": "envoy.filters.http.set_metadata",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.set_metadata.v3.Config"
       ]
      },
      {
       "name": "envoy.filters.http.wasm",
       "category": "envoy.filters.http",
       "type_urls": [
        "envoy.extensions.filters.http.wasm.v3.Wasm"
       ]
      },
      {
       "name": "envoy.grpc_web",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.health_check",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.local_rate_limit",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.rate_limit",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.router",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.thrift.router",
       "category": "envoy.thrift_proxy.filters",
       "type_urls": [
        "envoy.extensions.filters.network.thrift_proxy.router.v3.Router"
       ]
      },
      {
       "name": "cilium.network",
       "category": "envoy.filters.network",
       "type_urls": [
        "cilium.NetworkFilter"
       ]
      },
      {
       "name": "cilium.network.websocket.client",
       "category": "envoy.filters.network",
       "type_urls": [
        "cilium.WebSocketClient"
       ]
      },
      {
       "name": "cilium.network.websocket.server",
       "category": "envoy.filters.network",
       "type_urls": [
        "cilium.WebSocketServer"
       ]
      },
      {
       "name": "envoy.ext_authz",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.connection_limit",
       "category": "envoy.filters.network",
       "type_urls": [
        "envoy.extensions.filters.network.connection_limit.v3.ConnectionLimit"
       ]
      },
      {
       "name": "envoy.filters.network.ext_authz",
       "category": "envoy.filters.network",
       "type_urls": [
        "envoy.extensions.filters.network.ext_authz.v3.ExtAuthz"
       ]
      },
      {
       "name": "envoy.filters.network.http_connection_manager",
       "category": "envoy.filters.network",
       "type_urls": [
        "envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
       ]
      },
      {
       "name": "envoy.filters.network.local_ratelimit",
       "category": "envoy.filters.network",
       "type_urls": [
        "envoy.extensions.filters.network.local_ratelimit.v3.LocalRateLimit"
       ]
      },
      {
       "name": "envoy.filters.network.mongo_proxy",
       "category": "envoy.filters.network",
       "type_urls": [
        "envoy.extensions.filters.network.mongo_proxy.v3.MongoProxy"
       ]
      },
      {
       "name": "envoy.filters.network.mysql_proxy",
       "category": "envoy.filters.network",
       "type_urls": [
        "envoy.extensions.filters.network.mysql_proxy.v3.MySQLProxy"
       ]
      },
      {
       "name": "envoy.filters.network.ratelimit",
       "category": "envoy.filters.network",
       "type_urls": [
        "envoy.extensions.filters.network.ratelimit.v3.RateLimit"
       ]
      },
      {
       "name": "envoy.filters.network.rbac",
       "category": "envoy.filters.network",
       "type_urls": [
        "envoy.extensions.filters.network.rbac.v3.RBAC"
       ]
      },
      {
       "name": "envoy.filters.network.redis_proxy",
       "category": "envoy.filters.network",
       "type_urls": [
        "envoy.extensions.filters.network.redis_proxy.v3.RedisProxy"
       ]
      },
      {
       "name": "envoy.filters.network.set_filter_state",
       "category": "envoy.filters.network",
       "type_urls": [
        "envoy.extensions.filters.network.set_filter_state.v3.Config"
       ]
      },
      {
       "name": "envoy.filters.network.sni_cluster",
       "category": "envoy.filters.network",
       "type_urls": [
        "envoy.extensions.filters.network.sni_cluster.v3.SniCluster"
       ]
      },
      {
       "name": "envoy.filters.network.sni_dynamic_forward_proxy",
       "category": "envoy.filters.network",
       "type_urls": [
        "envoy.extensions.filters.network.sni_dynamic_forward_proxy.v3.FilterConfig"
       ]
      },
      {
       "name": "envoy.filters.network.tcp_proxy",
       "category": "envoy.filters.network",
       "type_urls": [
        "envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy"
       ]
      },
      {
       "name": "envoy.filters.network.thrift_proxy",
       "category": "envoy.filters.network",
       "type_urls": [
        "envoy.extensions.filters.network.thrift_proxy.v3.ThriftProxy"
       ]
      },
      {
       "name": "envoy.filters.network.wasm",
       "category": "envoy.filters.network",
       "type_urls": [
        "envoy.extensions.filters.network.wasm.v3.Wasm"
       ]
      },
      {
       "name": "envoy.http_connection_manager",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.mongo_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.ratelimit",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.redis_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.tcp_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.cluster.dns",
       "category": "envoy.clusters",
       "type_urls": [
        "envoy.extensions.clusters.dns.v3.DnsCluster"
       ]
      },
      {
       "name": "envoy.cluster.eds",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.cluster.logical_dns",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.cluster.original_dst",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.cluster.static",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.cluster.strict_dns",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.clusters.dynamic_forward_proxy",
       "category": "envoy.clusters",
       "type_urls": [
        "envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig"
       ]
      },
      {
       "name": "envoy.network.application_protocols",
       "category": "filter_state.object"
      },
      {
       "name": "envoy.network.ip",
       "category": "filter_state.object"
      },
      {
       "name": "envoy.network.transport_socket.original_dst_address",
       "category": "filter_state.object"
      },
      {
       "name": "envoy.network.upstream_server_name",
       "category": "filter_state.object"
      },
      {
       "name": "envoy.network.upstream_subject_alt_names",
       "category": "filter_state.object"
      },
      {
       "name": "envoy.ratelimit.hits_addend",
       "category": "filter_state.object"
      },
      {
       "name": "envoy.router.debug_config",
       "category": "filter_state.object"
      },
      {
       "name": "envoy.string",
       "category": "filter_state.object"
      },
      {
       "name": "envoy.tcp_proxy.cluster",
       "category": "filter_state.object"
      },
      {
       "name": "envoy.tcp_proxy.disable_tunneling",
       "category": "filter_state.object"
      },
      {
       "name": "envoy.tcp_proxy.per_connection_idle_timeout_ms",
       "category": "filter_state.object"
      },
      {
       "name": "envoy.upstream.dynamic_host",
       "category": "filter_state.object"
      },
      {
       "name": "envoy.upstream.dynamic_port",
       "category": "filter_state.object"
      },
      {
       "name": "envoy.udp_packet_writer.default",
       "category": "envoy.udp_packet_writer",
       "type_urls": [
        "envoy.extensions.udp_packet_writer.v3.UdpDefaultWriterFactory"
       ]
      },
      {
       "name": "envoy.udp_packet_writer.gso",
       "category": "envoy.udp_packet_writer",
       "type_urls": [
        "envoy.extensions.udp_packet_writer.v3.UdpGsoBatchWriterFactory"
       ]
      },
      {
       "name": "envoy.matching.matchers.cel_matcher",
       "category": "envoy.matching.input_matchers",
       "type_urls": [
        "xds.type.matcher.v3.CelMatcher"
       ]
      },
      {
       "name": "envoy.matching.inputs.cel_data_input",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "xds.type.matcher.v3.HttpAttributesCelMatchInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.destination_ip",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.destination_port",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.direct_source_ip",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.DirectSourceIPInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.dns_san",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.ssl.v3.DnsSanInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.filter_state",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.FilterStateInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.request_headers",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.type.matcher.v3.HttpRequestHeaderMatchInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.request_trailers",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.type.matcher.v3.HttpRequestTrailerMatchInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.response_headers",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.type.matcher.v3.HttpResponseHeaderMatchInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.response_trailers",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.type.matcher.v3.HttpResponseTrailerMatchInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.server_name",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.ServerNameInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.source_ip",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.SourceIPInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.source_port",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.SourcePortInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.source_type",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.network.v3.SourceTypeInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.subject",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.ssl.v3.SubjectInput"
       ]
      },
      {
       "name": "envoy.matching.inputs.uri_san",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput"
       ]
      },
      {
       "name": "query_params",
       "category": "envoy.matching.http.input",
       "type_urls": [
        "envoy.type.matcher.v3.HttpRequestQueryParamMatchInput"
       ]
      },
      {
       "name": "envoy.http.stateful_header_formatters.preserve_case",
       "category": "envoy.http.stateful_header_formatters",
       "type_urls": [
        "envoy.extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig"
       ]
      },
      {
       "name": "preserve_case",
       "category": "envoy.http.stateful_header_formatters"
      },
      {
       "name": "cilium.health_check.event_sink.pipe",
       "category": "envoy.health_check.event_sinks",
       "type_urls": [
        "cilium.HealthCheckEventPipeSink"
       ]
      },
      {
       "name": "envoy.health_check.event_sink.file",
       "category": "envoy.health_check.event_sinks",
       "type_urls": [
        "envoy.extensions.health_check.event_sinks.file.v3.HealthCheckEventFileSink"
       ]
      },
      {
       "name": "envoy.quic.connection_debug_visitor.basic",
       "category": "envoy.quic.connection_debug_visitor",
       "type_urls": [
        "envoy.extensions.quic.connection_debug_visitor.v3.BasicConfig"
       ]
      },
      {
       "name": "envoy.quic.connection_debug_visitor.quic_stats",
       "category": "envoy.quic.connection_debug_visitor",
       "type_urls": [
        "envoy.extensions.quic.connection_debug_visitor.quic_stats.v3.Config"
       ]
      },
      {
       "name": "envoy.filters.connection_pools.tcp.generic",
       "category": "envoy.upstreams",
       "type_urls": [
        "envoy.extensions.upstreams.tcp.generic.v3.GenericConnectionPoolProto"
       ]
      },
      {
       "name": "quic.http_server_connection.default",
       "category": "quic.http_server_connection"
      },
      {
       "name": "envoy.metrics_service",
       "category": "envoy.stats_sinks"
      },
      {
       "name": "envoy.open_telemetry_stat_sink",
       "category": "envoy.stats_sinks"
      },
      {
       "name": "envoy.stat_sinks.metrics_service",
       "category": "envoy.stats_sinks",
       "type_urls": [
        "envoy.config.metrics.v3.MetricsServiceConfig"
       ]
      },
      {
       "name": "envoy.stat_sinks.open_telemetry",
       "category": "envoy.stats_sinks",
       "type_urls": [
        "envoy.extensions.stat_sinks.open_telemetry.v3.SinkConfig"
       ]
      },
      {
       "name": "envoy.stat_sinks.wasm",
       "category": "envoy.stats_sinks",
       "type_urls": [
        "envoy.extensions.stat_sinks.wasm.v3.Wasm"
       ]
      }
     ]
    },
    "static_resources": {
     "listeners": [
      {
       "name": "envoy-prometheus-metrics-listener",
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 9964
        }
       },
       "filter_chains": [
        {
         "filters": [
          {
           "name": "envoy.filters.network.http_connection_manager",
           "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
            "stat_prefix": "envoy-prometheus-metrics-listener",
            "route_config": {
             "virtual_hosts": [
              {
               "name": "prometheus_metrics_route",
               "domains": [
                "*"
               ],
               "routes": [
                {
                 "match": {
                  "prefix": "/metrics"
                 },
                 "route": {
                  "cluster": "/envoy-admin",
                  "prefix_rewrite": "/stats/prometheus"
                 },
                 "name": "prometheus_metrics_route"
                }
               ]
              }
             ]
            },
            "http_filters": [
             {
              "name": "envoy.filters.http.router",
              "typed_config": {
               "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
              }
             }
            ],
            "stream_idle_timeout": "300s",
            "internal_address_config": {
             "cidr_ranges": [
              {
               "address_prefix": "10.0.0.0",
               "prefix_len": 8
              },
              {
               "address_prefix": "172.16.0.0",
               "prefix_len": 12
              },
              {
               "address_prefix": "192.168.0.0",
               "prefix_len": 16
              },
              {
               "address_prefix": "127.0.0.1",
               "prefix_len": 32
              }
             ]
            }
           }
          }
         ]
        }
       ]
      },
      {
       "name": "envoy-health-listener",
       "address": {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 9878
        }
       },
       "filter_chains": [
        {
         "filters": [
          {
           "name": "envoy.filters.network.http_connection_manager",
           "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
            "stat_prefix": "envoy-health-listener",
            "route_config": {
             "virtual_hosts": [
              {
               "name": "health",
               "domains": [
                "*"
               ],
               "routes": [
                {
                 "match": {
                  "prefix": "/healthz"
                 },
                 "route": {
                  "cluster": "/envoy-admin",
                  "prefix_rewrite": "/ready"
                 },
                 "name": "health"
                }
               ]
              }
             ]
            },
            "http_filters": [
             {
              "name": "envoy.filters.http.router",
              "typed_config": {
               "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
              }
             }
            ],
            "stream_idle_timeout": "300s",
            "internal_address_config": {
             "cidr_ranges": [
              {
               "address_prefix": "10.0.0.0",
               "prefix_len": 8
              },
              {
               "address_prefix": "172.16.0.0",
               "prefix_len": 12
              },
              {
               "address_prefix": "192.168.0.0",
               "prefix_len": 16
              },
              {
               "address_prefix": "127.0.0.1",
               "prefix_len": 32
              }
             ]
            }
           }
          }
         ]
        }
       ]
      }
     ],
     "clusters": [
      {
       "name": "ingress-cluster",
       "type": "ORIGINAL_DST",
       "connect_timeout": "2s",
       "lb_policy": "CLUSTER_PROVIDED",
       "circuit_breakers": {
        "thresholds": [
         {
          "max_retries": 128
         }
        ]
       },
       "cleanup_interval": "2.500s",
       "typed_extension_protocol_options": {
        "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
         "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
         "common_http_protocol_options": {
          "idle_timeout": "60s",
          "max_connection_duration": "0s",
          "max_requests_per_connection": 0
         },
         "use_downstream_protocol_config": {}
        }
       }
      },
      {
       "name": "egress-cluster-tls",
       "type": "ORIGINAL_DST",
       "connect_timeout": "2s",
       "lb_policy": "CLUSTER_PROVIDED",
       "circuit_breakers": {
        "thresholds": [
         {
          "max_retries": 128
         }
        ]
       },
       "cleanup_interval": "2.500s",
       "transport_socket": {
        "name": "cilium.tls_wrapper",
        "typed_config": {
         "@type": "type.googleapis.com/cilium.UpstreamTlsWrapperContext"
        }
       },
       "typed_extension_protocol_options": {
        "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
         "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
         "common_http_protocol_options": {
          "idle_timeout": "60s",
          "max_connection_duration": "0s",
          "max_requests_per_connection": 0
         },
         "upstream_http_protocol_options": {},
         "use_downstream_protocol_config": {}
        }
       }
      },
      {
       "name": "egress-cluster",
       "type": "ORIGINAL_DST",
       "connect_timeout": "2s",
       "lb_policy": "CLUSTER_PROVIDED",
       "circuit_breakers": {
        "thresholds": [
         {
          "max_retries": 128
         }
        ]
       },
       "cleanup_interval": "2.500s",
       "typed_extension_protocol_options": {
        "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
         "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
         "common_http_protocol_options": {
          "idle_timeout": "60s",
          "max_connection_duration": "0s",
          "max_requests_per_connection": 0
         },
         "use_downstream_protocol_config": {}
        }
       }
      },
      {
       "name": "ingress-cluster-tls",
       "type": "ORIGINAL_DST",
       "connect_timeout": "2s",
       "lb_policy": "CLUSTER_PROVIDED",
       "circuit_breakers": {
        "thresholds": [
         {
          "max_retries": 128
         }
        ]
       },
       "cleanup_interval": "2.500s",
       "transport_socket": {
        "name": "cilium.tls_wrapper",
        "typed_config": {
         "@type": "type.googleapis.com/cilium.UpstreamTlsWrapperContext"
        }
       },
       "typed_extension_protocol_options": {
        "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
         "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
         "common_http_protocol_options": {
          "idle_timeout": "60s",
          "max_connection_duration": "0s",
          "max_requests_per_connection": 0
         },
         "upstream_http_protocol_options": {},
         "use_downstream_protocol_config": {}
        }
       }
      },
      {
       "name": "xds-grpc-cilium",
       "type": "STATIC",
       "connect_timeout": "2s",
       "load_assignment": {
        "cluster_name": "xds-grpc-cilium",
        "endpoints": [
         {
          "lb_endpoints": [
           {
            "endpoint": {
             "address": {
              "pipe": {
               "path": "/var/run/cilium/envoy/sockets/xds.sock"
              }
             }
            }
           }
          ]
         }
        ]
       },
       "typed_extension_protocol_options": {
        "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
         "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
         "explicit_http_config": {
          "http2_protocol_options": {}
         }
        }
       }
      },
      {
       "name": "/envoy-admin",
       "type": "STATIC",
       "connect_timeout": "2s",
       "load_assignment": {
        "cluster_name": "/envoy-admin",
        "endpoints": [
         {
          "lb_endpoints": [
           {
            "endpoint": {
             "address": {
              "pipe": {
               "path": "/var/run/cilium/envoy/sockets/admin.sock"
              }
             }
            }
           }
          ]
         }
        ]
       }
      }
     ]
    },
    "dynamic_resources": {
     "lds_config": {
      "api_config_source": {
       "api_type": "GRPC",
       "grpc_services": [
        {
         "envoy_grpc": {
          "cluster_name": "xds-grpc-cilium"
         }
        }
       ],
       "set_node_on_first_message_only": true,
       "transport_api_version": "V3"
      },
      "initial_fetch_timeout": "30s",
      "resource_api_version": "V3"
     },
     "cds_config": {
      "api_config_source": {
       "api_type": "GRPC",
       "grpc_services": [
        {
         "envoy_grpc": {
          "cluster_name": "xds-grpc-cilium"
         }
        }
       ],
       "set_node_on_first_message_only": true,
       "transport_api_version": "V3"
      },
      "initial_fetch_timeout": "30s",
      "resource_api_version": "V3"
     }
    },
    "admin": {
     "address": {
      "pipe": {
       "path": "/var/run/cilium/envoy/sockets/admin.sock"
      }
     }
    },
    "overload_manager": {
     "resource_monitors": [
      {
       "name": "envoy.resource_monitors.global_downstream_max_connections",
       "typed_config": {
        "@type": "type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig",
        "max_active_downstream_connections": "50000"
       }
      }
     ]
    },
    "bootstrap_extensions": [
     {
      "name": "envoy.bootstrap.internal_listener",
      "typed_config": {
       "@type": "type.googleapis.com/envoy.extensions.bootstrap.internal_listener.v3.InternalListener"
      }
     }
    ],
    "application_log_config": {
     "log_format": {
      "text_format": "[%Y-%m-%d %T.%e][%t][%l][%n] [%g:%#] %v"
     }
    }
   },
   "last_updated": "2026-02-06T22:20:18.794Z"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.ClustersConfigDump",
   "version_info": "2",
   "static_clusters": [
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
      "name": "/envoy-admin",
      "type": "STATIC",
      "connect_timeout": "2s",
      "load_assignment": {
       "cluster_name": "/envoy-admin",
       "endpoints": [
        {
         "lb_endpoints": [
          {
           "endpoint": {
            "address": {
             "pipe": {
              "path": "/var/run/cilium/envoy/sockets/admin.sock"
             }
            }
           }
          }
         ]
        }
       ]
      }
     },
     "last_updated": "2026-02-06T22:20:18.802Z"
    },
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
      "name": "egress-cluster",
      "type": "ORIGINAL_DST",
      "connect_timeout": "2s",
      "lb_policy": "CLUSTER_PROVIDED",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 128
        }
       ]
      },
      "cleanup_interval": "2.500s",
      "typed_extension_protocol_options": {
       "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
        "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
        "common_http_protocol_options": {
         "idle_timeout": "60s",
         "max_connection_duration": "0s",
         "max_requests_per_connection": 0
        },
        "use_downstream_protocol_config": {}
       }
      }
     },
     "last_updated": "2026-02-06T22:20:18.801Z"
    },
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
      "name": "egress-cluster-tls",
      "type": "ORIGINAL_DST",
      "connect_timeout": "2s",
      "lb_policy": "CLUSTER_PROVIDED",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 128
        }
       ]
      },
      "cleanup_interval": "2.500s",
      "transport_socket": {
       "name": "cilium.tls_wrapper",
       "typed_config": {
        "@type": "type.googleapis.com/cilium.UpstreamTlsWrapperContext"
       }
      },
      "typed_extension_protocol_options": {
       "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
        "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
        "common_http_protocol_options": {
         "idle_timeout": "60s",
         "max_connection_duration": "0s",
         "max_requests_per_connection": 0
        },
        "upstream_http_protocol_options": {},
        "use_downstream_protocol_config": {}
       }
      }
     },
     "last_updated": "2026-02-06T22:20:18.800Z"
    },
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
      "name": "ingress-cluster",
      "type": "ORIGINAL_DST",
      "connect_timeout": "2s",
      "lb_policy": "CLUSTER_PROVIDED",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 128
        }
       ]
      },
      "cleanup_interval": "2.500s",
      "typed_extension_protocol_options": {
       "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
        "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
        "common_http_protocol_options": {
         "idle_timeout": "60s",
         "max_connection_duration": "0s",
         "max_requests_per_connection": 0
        },
        "use_downstream_protocol_config": {}
       }
      }
     },
     "last_updated": "2026-02-06T22:20:18.800Z"
    },
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
      "name": "ingress-cluster-tls",
      "type": "ORIGINAL_DST",
      "connect_timeout": "2s",
      "lb_policy": "CLUSTER_PROVIDED",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 128
        }
       ]
      },
      "cleanup_interval": "2.500s",
      "transport_socket": {
       "name": "cilium.tls_wrapper",
       "typed_config": {
        "@type": "type.googleapis.com/cilium.UpstreamTlsWrapperContext"
       }
      },
      "typed_extension_protocol_options": {
       "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
        "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
        "common_http_protocol_options": {
         "idle_timeout": "60s",
         "max_connection_duration": "0s",
         "max_requests_per_connection": 0
        },
        "upstream_http_protocol_options": {},
        "use_downstream_protocol_config": {}
       }
      }
     },
     "last_updated": "2026-02-06T22:20:18.801Z"
    },
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
      "name": "xds-grpc-cilium",
      "type": "STATIC",
      "connect_timeout": "2s",
      "load_assignment": {
       "cluster_name": "xds-grpc-cilium",
       "endpoints": [
        {
         "lb_endpoints": [
          {
           "endpoint": {
            "address": {
             "pipe": {
              "path": "/var/run/cilium/envoy/sockets/xds.sock"
             }
            }
           }
          }
         ]
        }
       ]
      },
      "typed_extension_protocol_options": {
       "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
        "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
        "explicit_http_config": {
         "http2_protocol_options": {}
        }
       }
      }
     },
     "last_updated": "2026-02-06T22:20:18.802Z"
    }
   ],
   "dynamic_active_clusters": [
    {
     "version_info": "2",
     "cluster": {
      "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
      "name": "nexusnote/cilium-gateway-nexusnote-gateway/nexusnote:nexusnote-service:80",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "api_config_source": {
         "api_type": "GRPC",
         "grpc_services": [
          {
           "envoy_grpc": {
            "cluster_name": "xds-grpc-cilium"
           }
          }
         ],
         "set_node_on_first_message_only": true,
         "transport_api_version": "V3"
        },
        "initial_fetch_timeout": "30s",
        "resource_api_version": "V3"
       },
       "service_name": "nexusnote/nexusnote-service:80"
      },
      "connect_timeout": "5s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 1024,
         "max_requests": 1024,
         "max_retries": 128
        }
       ]
      },
      "outlier_detection": {
       "split_external_local_origin_errors": true
      },
      "typed_extension_protocol_options": {
       "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
        "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
        "common_http_protocol_options": {
         "idle_timeout": "60s"
        },
        "use_downstream_protocol_config": {
         "http2_protocol_options": {}
        },
        "http_filters": [
         {
          "name": "cilium.l7policy",
          "typed_config": {
           "@type": "type.googleapis.com/cilium.L7Policy",
           "access_log_path": "/var/run/cilium/envoy/sockets/access_log.sock"
          }
         },
         {
          "name": "envoy.filters.http.upstream_codec",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec"
          }
         }
        ]
       }
      }
     },
     "last_updated": "2026-02-06T22:23:22.319Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.EndpointsConfigDump",
   "static_endpoint_configs": [
    {
     "endpoint_config": {
      "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
      "cluster_name": "ingress-cluster-tls",
      "policy": {
       "overprovisioning_factor": 140
      }
     }
    },
    {
     "endpoint_config": {
      "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
      "cluster_name": "egress-cluster",
      "policy": {
       "overprovisioning_factor": 140
      }
     }
    },
    {
     "endpoint_config": {
      "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
      "cluster_name": "/envoy-admin",
      "endpoints": [
       {
        "locality": {},
        "lb_endpoints": [
         {
          "endpoint": {
           "address": {
            "pipe": {
             "path": "/var/run/cilium/envoy/sockets/admin.sock"
            }
           },
           "health_check_config": {}
          },
          "health_status": "HEALTHY",
          "load_balancing_weight": 1
         }
        ],
        "load_balancing_weight": 0
       }
      ],
      "policy": {
       "overprovisioning_factor": 140
      }
     }
    },
    {
     "endpoint_config": {
      "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
      "cluster_name": "egress-cluster-tls",
      "policy": {
       "overprovisioning_factor": 140
      }
     }
    },
    {
     "endpoint_config": {
      "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
      "cluster_name": "xds-grpc-cilium",
      "endpoints": [
       {
        "locality": {},
        "lb_endpoints": [
         {
          "endpoint": {
           "address": {
            "pipe": {
             "path": "/var/run/cilium/envoy/sockets/xds.sock"
            }
           },
           "health_check_config": {}
          },
          "health_status": "HEALTHY",
          "load_balancing_weight": 1
         }
        ],
        "load_balancing_weight": 0
       }
      ],
      "policy": {
       "overprovisioning_factor": 140
      }
     }
    },
    {
     "endpoint_config": {
      "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
      "cluster_name": "ingress-cluster",
      "policy": {
       "overprovisioning_factor": 140
      }
     }
    }
   ],
   "dynamic_endpoint_configs": [
    {
     "endpoint_config": {
      "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
      "cluster_name": "nexusnote/nexusnote-service:80",
      "endpoints": [
       {
        "locality": {},
        "lb_endpoints": [
         {
          "endpoint": {
           "address": {
            "socket_address": {
             "address": "10.42.0.127",
             "port_value": 3002
            }
           },
           "health_check_config": {}
          },
          "health_status": "HEALTHY",
          "load_balancing_weight": 1
         }
        ],
        "load_balancing_weight": 0
       }
      ],
      "policy": {
       "overprovisioning_factor": 140
      }
     }
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.ListenersConfigDump",
   "version_info": "3",
   "static_listeners": [
    {
     "listener": {
      "@type": "type.googleapis.com/envoy.config.listener.v3.Listener",
      "name": "envoy-prometheus-metrics-listener",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9964
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.filters.network.http_connection_manager",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
           "stat_prefix": "envoy-prometheus-metrics-listener",
           "route_config": {
            "virtual_hosts": [
             {
              "name": "prometheus_metrics_route",
              "domains": [
               "*"
              ],
              "routes": [
               {
                "match": {
                 "prefix": "/metrics"
                },
                "route": {
                 "cluster": "/envoy-admin",
                 "prefix_rewrite": "/stats/prometheus"
                },
                "name": "prometheus_metrics_route"
               }
              ]
             }
            ]
           },
           "http_filters": [
            {
             "name": "envoy.filters.http.router",
             "typed_config": {
              "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
             }
            }
           ],
           "stream_idle_timeout": "300s",
           "internal_address_config": {
            "cidr_ranges": [
             {
              "address_prefix": "10.0.0.0",
              "prefix_len": 8
             },
             {
              "address_prefix": "172.16.0.0",
              "prefix_len": 12
             },
             {
              "address_prefix": "192.168.0.0",
              "prefix_len": 16
             },
             {
              "address_prefix": "127.0.0.1",
              "prefix_len": 32
             }
            ]
           }
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2026-02-06T22:20:18.803Z"
    },
    {
     "listener": {
      "@type": "type.googleapis.com/envoy.config.listener.v3.Listener",
      "name": "envoy-health-listener",
      "address": {
       "socket_address": {
        "address": "127.0.0.1",
        "port_value": 9878
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.filters.network.http_connection_manager",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
           "stat_prefix": "envoy-health-listener",
           "route_config": {
            "virtual_hosts": [
             {
              "name": "health",
              "domains": [
               "*"
              ],
              "routes": [
               {
                "match": {
                 "prefix": "/healthz"
                },
                "route": {
                 "cluster": "/envoy-admin",
                 "prefix_rewrite": "/ready"
                },
                "name": "health"
               }
              ]
             }
            ]
           },
           "http_filters": [
            {
             "name": "envoy.filters.http.router",
             "typed_config": {
              "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
             }
            }
           ],
           "stream_idle_timeout": "300s",
           "internal_address_config": {
            "cidr_ranges": [
             {
              "address_prefix": "10.0.0.0",
              "prefix_len": 8
             },
             {
              "address_prefix": "172.16.0.0",
              "prefix_len": 12
             },
             {
              "address_prefix": "192.168.0.0",
              "prefix_len": 16
             },
             {
              "address_prefix": "127.0.0.1",
              "prefix_len": 32
             }
            ]
           }
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2026-02-06T22:20:18.804Z"
    }
   ],
   "dynamic_listeners": [
    {
     "name": "nexusnote/cilium-gateway-nexusnote-gateway/listener",
     "active_state": {
      "version_info": "3",
      "listener": {
       "@type": "type.googleapis.com/envoy.config.listener.v3.Listener",
       "name": "nexusnote/cilium-gateway-nexusnote-gateway/listener",
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 8080
        }
       },
       "filter_chains": [
        {
         "filter_chain_match": {
          "transport_protocol": "raw_buffer"
         },
         "filters": [
          {
           "name": "cilium.network",
           "typed_config": {
            "@type": "type.googleapis.com/cilium.NetworkFilter"
           }
          },
          {
           "name": "envoy.filters.network.http_connection_manager",
           "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
            "stat_prefix": "listener-insecure",
            "rds": {
             "config_source": {
              "api_config_source": {
               "api_type": "GRPC",
               "grpc_services": [
                {
                 "envoy_grpc": {
                  "cluster_name": "xds-grpc-cilium"
                 }
                }
               ],
               "set_node_on_first_message_only": true,
               "transport_api_version": "V3"
              },
              "initial_fetch_timeout": "30s",
              "resource_api_version": "V3"
             },
             "route_config_name": "nexusnote/cilium-gateway-nexusnote-gateway/listener-insecure"
            },
            "http_filters": [
             {
              "name": "envoy.filters.http.grpc_web",
              "typed_config": {
               "@type": "type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb"
              }
             },
             {
              "name": "envoy.filters.http.grpc_stats",
              "typed_config": {
               "@type": "type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig",
               "emit_filter_state": true,
               "enable_upstream_stats": true
              }
             },
             {
              "name": "cilium.l7policy",
              "typed_config": {
               "@type": "type.googleapis.com/cilium.L7Policy",
               "access_log_path": "/var/run/cilium/envoy/sockets/access_log.sock"
              }
             },
             {
              "name": "envoy.filters.http.router",
              "typed_config": {
               "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
              }
             }
            ],
            "use_remote_address": true,
            "upgrade_configs": [
             {
              "upgrade_type": "websocket"
             }
            ],
            "internal_address_config": {
             "cidr_ranges": [
              {
               "address_prefix": "10.0.0.0",
               "prefix_len": 8
              },
              {
               "address_prefix": "172.16.0.0",
               "prefix_len": 12
              },
              {
               "address_prefix": "192.168.0.0",
               "prefix_len": 16
              },
              {
               "address_prefix": "127.0.0.1",
               "prefix_len": 32
              },
              {
               "address_prefix": "::1",
               "prefix_len": 128
              }
             ]
            },
            "common_http_protocol_options": {
             "max_stream_duration": "0s"
            }
           }
          }
         ]
        }
       ],
       "listener_filters": [
        {
         "name": "envoy.filters.listener.tls_inspector",
         "typed_config": {
          "@type": "type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector"
         }
        },
        {
         "name": "cilium.bpf_metadata",
         "typed_config": {
          "@type": "type.googleapis.com/cilium.BpfMetadata",
          "bpf_root": "/sys/fs/bpf",
          "is_l7lb": true,
          "ipv4_source_address": "10.42.0.246",
          "enforce_policy_on_l7lb": true,
          "proxy_id": 8080,
          "ipcache_name": "cilium_ipcache_v2"
         }
        }
       ],
       "socket_options": [
        {
         "description": "Enable TCP keep-alive (default to enabled)",
         "level": "1",
         "name": "9",
         "int_value": "1"
        },
        {
         "description": "TCP keep-alive idle time (in seconds) (defaults to 10s)",
         "level": "6",
         "name": "4",
         "int_value": "10"
        },
        {
         "description": "TCP keep-alive probe intervals (in seconds) (defaults to 5s)",
         "level": "6",
         "name": "5",
         "int_value": "5"
        },
        {
         "description": "TCP keep-alive probe max failures.",
         "level": "6",
         "name": "6",
         "int_value": "10"
        }
       ]
      },
      "last_updated": "2026-02-06T22:23:45.540Z"
     },
     "draining_state": {
      "version_info": "2",
      "listener": {
       "@type": "type.googleapis.com/envoy.config.listener.v3.Listener",
       "name": "nexusnote/cilium-gateway-nexusnote-gateway/listener",
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 8080
        }
       },
       "filter_chains": [
        {
         "filter_chain_match": {
          "transport_protocol": "raw_buffer"
         },
         "filters": [
          {
           "name": "cilium.network",
           "typed_config": {
            "@type": "type.googleapis.com/cilium.NetworkFilter"
           }
          },
          {
           "name": "envoy.filters.network.http_connection_manager",
           "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
            "stat_prefix": "listener-insecure",
            "rds": {
             "config_source": {
              "api_config_source": {
               "api_type": "GRPC",
               "grpc_services": [
                {
                 "envoy_grpc": {
                  "cluster_name": "xds-grpc-cilium"
                 }
                }
               ],
               "set_node_on_first_message_only": true,
               "transport_api_version": "V3"
              },
              "initial_fetch_timeout": "30s",
              "resource_api_version": "V3"
             },
             "route_config_name": "nexusnote/cilium-gateway-nexusnote-gateway/listener-insecure"
            },
            "http_filters": [
             {
              "name": "envoy.filters.http.grpc_web",
              "typed_config": {
               "@type": "type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb"
              }
             },
             {
              "name": "envoy.filters.http.grpc_stats",
              "typed_config": {
               "@type": "type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig",
               "emit_filter_state": true,
               "enable_upstream_stats": true
              }
             },
             {
              "name": "cilium.l7policy",
              "typed_config": {
               "@type": "type.googleapis.com/cilium.L7Policy",
               "access_log_path": "/var/run/cilium/envoy/sockets/access_log.sock"
              }
             },
             {
              "name": "envoy.filters.http.router",
              "typed_config": {
               "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
              }
             }
            ],
            "use_remote_address": true,
            "upgrade_configs": [
             {
              "upgrade_type": "websocket"
             }
            ],
            "internal_address_config": {
             "cidr_ranges": [
              {
               "address_prefix": "10.0.0.0",
               "prefix_len": 8
              },
              {
               "address_prefix": "172.16.0.0",
               "prefix_len": 12
              },
              {
               "address_prefix": "192.168.0.0",
               "prefix_len": 16
              },
              {
               "address_prefix": "127.0.0.1",
               "prefix_len": 32
              },
              {
               "address_prefix": "::1",
               "prefix_len": 128
              }
             ]
            },
            "common_http_protocol_options": {
             "max_stream_duration": "0s"
            }
           }
          }
         ]
        }
       ],
       "listener_filters": [
        {
         "name": "envoy.filters.listener.tls_inspector",
         "typed_config": {
          "@type": "type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector"
         }
        },
        {
         "name": "cilium.bpf_metadata",
         "typed_config": {
          "@type": "type.googleapis.com/cilium.BpfMetadata",
          "bpf_root": "/sys/fs/bpf",
          "is_l7lb": true,
          "ipv4_source_address": "10.42.0.185",
          "enforce_policy_on_l7lb": true,
          "proxy_id": 8080,
          "ipcache_name": "cilium_ipcache_v2"
         }
        }
       ],
       "socket_options": [
        {
         "description": "Enable TCP keep-alive (default to enabled)",
         "level": "1",
         "name": "9",
         "int_value": "1"
        },
        {
         "description": "TCP keep-alive idle time (in seconds) (defaults to 10s)",
         "level": "6",
         "name": "4",
         "int_value": "10"
        },
        {
         "description": "TCP keep-alive probe intervals (in seconds) (defaults to 5s)",
         "level": "6",
         "name": "5",
         "int_value": "5"
        },
        {
         "description": "TCP keep-alive probe max failures.",
         "level": "6",
         "name": "6",
         "int_value": "10"
        }
       ]
      },
      "last_updated": "2026-02-06T22:23:22.322Z"
     }
    }
   ]
  },
  {
   "@type": "type.googleapis.com/cilium.NetworkPoliciesConfigDump",
   "networkpolicies": [
    {
     "endpoint_ips": [
      "10.42.0.79"
     ],
     "endpoint_id": "3941",
     "ingress_per_port_policies": [
      {}
     ],
     "egress_per_port_policies": [
      {}
     ],
     "conntrack_map_name": "global"
    },
    {
     "endpoint_ips": [
      "10.42.0.78"
     ],
     "endpoint_id": "706",
     "ingress_per_port_policies": [
      {}
     ],
     "egress_per_port_policies": [
      {}
     ],
     "conntrack_map_name": "global"
    },
    {
     "endpoint_ips": [
      "10.42.0.91"
     ],
     "endpoint_id": "1871",
     "ingress_per_port_policies": [
      {}
     ],
     "egress_per_port_policies": [
      {}
     ],
     "conntrack_map_name": "global"
    },
    {
     "endpoint_ips": [
      "10.42.0.82"
     ],
     "endpoint_id": "615",
     "ingress_per_port_policies": [
      {}
     ],
     "egress_per_port_policies": [
      {}
     ],
     "conntrack_map_name": "global"
    },
    {
     "endpoint_ips": [
      "10.42.0.246"
     ],
     "endpoint_id": "2703",
     "ingress_per_port_policies": [
      {}
     ],
     "egress_per_port_policies": [
      {}
     ],
     "conntrack_map_name": "global"
    },
    {
     "endpoint_ips": [
      "10.42.0.242"
     ],
     "endpoint_id": "1166",
     "ingress_per_port_policies": [
      {}
     ],
     "egress_per_port_policies": [
      {}
     ],
     "conntrack_map_name": "global"
    },
    {
     "endpoint_ips": [
      "10.42.0.14"
     ],
     "endpoint_id": "3025",
     "ingress_per_port_policies": [
      {}
     ],
     "egress_per_port_policies": [
      {}
     ],
     "conntrack_map_name": "global"
    },
    {
     "endpoint_ips": [
      "10.42.0.145"
     ],
     "endpoint_id": "1556",
     "ingress_per_port_policies": [
      {}
     ],
     "egress_per_port_policies": [
      {}
     ],
     "conntrack_map_name": "global"
    },
    {
     "endpoint_ips": [
      "10.42.0.127"
     ],
     "endpoint_id": "539",
     "ingress_per_port_policies": [
      {}
     ],
     "egress_per_port_policies": [
      {}
     ],
     "conntrack_map_name": "global"
    },
    {
     "endpoint_ips": [
      "10.42.0.183"
     ],
     "endpoint_id": "291",
     "ingress_per_port_policies": [
      {}
     ],
     "egress_per_port_policies": [
      {}
     ],
     "conntrack_map_name": "global"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.ScopedRoutesConfigDump"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.RoutesConfigDump",
   "static_route_configs": [
    {
     "route_config": {
      "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
      "virtual_hosts": [
       {
        "name": "health",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/healthz"
          },
          "route": {
           "cluster": "/envoy-admin",
           "prefix_rewrite": "/ready"
          },
          "name": "health"
         }
        ]
       }
      ]
     },
     "last_updated": "2026-02-06T22:20:18.804Z"
    },
    {
     "route_config": {
      "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
      "virtual_hosts": [
       {
        "name": "prometheus_metrics_route",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/metrics"
          },
          "route": {
           "cluster": "/envoy-admin",
           "prefix_rewrite": "/stats/prometheus"
          },
          "name": "prometheus_metrics_route"
         }
        ]
       }
      ]
     },
     "last_updated": "2026-02-06T22:20:18.803Z"
    }
   ],
   "dynamic_route_configs": [
    {
     "version_info": "2",
     "route_config": {
      "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
      "name": "nexusnote/cilium-gateway-nexusnote-gateway/listener-insecure",
      "virtual_hosts": [
       {
        "name": "nexusnote/cilium-gateway-nexusnote-gateway/juanie.art",
        "domains": [
         "juanie.art",
         "juanie.art:*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "redirect": {
           "scheme_redirect": "https",
           "port_redirect": 443
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2026-02-06T22:23:22.323Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.SecretsConfigDump"
  }
 ]
}
